# dependency-inversion

./: .gitignore  pyproject.toml
src/dependency_inversion/: rename_structure_names_with_callable.py  rename_structure_names_with_dict.py  rtstruct_helpers.py
tests/: conftest.py  test_rename_structure_names_with_dict.py
tests/data/: rtstruct-1.dcm
